syntax = "proto3";
package qaul.net.filesharing;

// Filesharing service network message container
message FileSharingContainer {
    oneof message {
        FileSharingInfo file_info = 1;
        FileSharingData file_data = 2;
    }
}

// FileSharing Message Content
message FileSharingInfo {
    // file id
    uint64 file_id = 1;

    // file name
    string file_name = 2;

    // file extension
    string file_extension = 3;
    // file size
    uint32 file_size = 4;

    // file description
    string file_descr = 5;

    // start index
    uint32 start_index = 6;

    // message count
    uint32 message_count = 7;
}

// FileSharing Data Message
message FileSharingData{    
    // start index
    uint32 start_index = 1;

    // message count
    uint32 message_count = 2;

    // package data
    bytes data = 3;
}
